[metadata]
name = bil_api

author = Alan M Watson
author_email = alan.watson@pitt.edu
url = https://github.com/CBI-PITT/BrAinPI
license = BSD-3-Clause
description = An API for serving multiscale microscopy data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/CBI-PITT/BrAinPI/issues
    Documentation = https://github.com/CBI-PITT/BrAinPI#README.md
    Source Code = https://github.com/CBI-PITT/BrAinPI
    User Support = https://github.com/CBI-PITT/BrAinPI/issues

[options]
packages = find:
python_requires = >=3.8
setup_requires =
	setuptools_scm
	numpy
	scikit-build
# add your package requirements here
install_requires =
	scikit-image==0.24.0
	Werkzeug<3.0
	flask==2.3.3
	flask-cors==4.0.2
	flask-login==0.6.3
	flask_limiter==3.8.0
	Flask-Caching==2.3.0
	boto3==1.35.9
	ldap3==2.9.1
	gunicorn==23.0.0
	diskcache==5.6.3
	zarr==2.18.2
	dask==2024.8.1
	distributed==2024.8.1
	bokeh>=1.0
	requests==2.32.3
	h5py==3.11.0
	imagecodecs==2024.6.1
	#imaris-ims-file-reader==0.1.8
	imaris-ims-file-reader @ git+https://github.com/CBI-PITT/imaris_ims_file_reader.git
	tifffile==2024.8.28
	neuroglancer-scripts==1.2.0
	neuroglancer==2.40.1
	imageio==2.35.1
	pebble==5.0.7
	natsort==8.4.0
	blosc==1.11.2
	numcodecs==0.13.0
	gevent==24.2.1
	pycryptodome==3.20.0
	pyjwt==2.9.0
	filelock==3.15.4
	pympler==1.1
	#v3d-py-helper==0.4.1
	v3d-py-helper @ git+https://github.com/CBI-PITT/v3d-py-helper.git
	loguru==0.7.2
	opencv-python-headless==4.10.0.84
	rsa==4.9
	#zarr_stores @ git+https://github.com/CBI-PITT/zarr_stores.git
	zarr_stores @ git+https://github.com/CBI-PITT/zarr_stores.git@develop
	#nifti-zarr @ git+https://github.com/neuroscales/nifti-zarr.git@5dedbca3e45e69e1b70aa481c73f2dcd4487544c#egg=nifti-zarr&subdirectory=python
	nifti-zarr==1.0.0rc3

